fix(OptionsList): prevent horizontal scrollbar

--- a/src/components/generic/OptionsList/OptionsList.scss
+++ b/src/components/generic/OptionsList/OptionsList.scss
@@ -1,6 +1,7 @@
 $C: #{$WEBEX_COMPONENTS_CLASS_PREFIX}-options-list;
 
 .#{$C} {
+  box-sizing: border-box;
   border-radius: 0.75rem;
   box-shadow: var(--wxc-options-list--normal--box-shadow);
   background: var(--wxc-options-list--normal--background);
